# core-services-api

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.sh  pyproject.toml  requirements.txt
api/: main.py
api/controller/: loupe_controller.py
api/lib/: auth.py
api/lib/services/: benchling_service.py
api/routes/: loupe.py
api/routes/loupe/: loupe_v1.py
api/routes/projects/: projects_v1.py
api/tests/: test_auth.py
api/tests/mocks/: mock_request.py
app/: main.py
app/routers/: loupe.py  projects.py
config/: api_settings.py  unlimiter.config.yaml
