[tool.poetry]
name = "core-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python = "3.10"
okta-jwt-verifier = "^0.2.1"
python-dotenv = "^0.19.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
